--- a/.github/workflows/twitter-together.yml
+++ b/.github/workflows/twitter-together.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
     steps:
-      - uses: gr2m/twitter-together@v1.x
+      - uses: gr2m/twitter-together@v1.8.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   tweet:
@@ -17,7 +17,7 @@ jobs:
       - name: checkout master
         uses: actions/checkout@v2
       - name: Tweet
-        uses: gr2m/twitter-together@v1.x
+        uses: gr2m/twitter-together@v1.8.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
