--- a/.asf.yaml
+++ b/.asf.yaml
@@ -42,6 +42,6 @@ github:
 notifications:
   commits:              commits@cordova.apache.org
   issues:               issues@cordova.apache.org
-  discussions:          dev@cordova.apache.org
+  discussions:          issues@cordova.apache.org
   pullrequests_status:  issues@cordova.apache.org
   pullrequests_comment: issues@cordova.apache.org
