chore(asf.yml): Flag GitHub Discussions as enabled

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -33,6 +33,7 @@ github:
     wiki: false
     issues: true
     projects: true
+    discussions: true
   
   enabled_merge_buttons:
     squash: true
